Update python series and add version with solutions

--- a/python_series_solutions.ipynb
+++ b/python_series_solutions.ipynb
@@ -1141,6 +1141,160 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "my_fruit = \"pineapple\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pine\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_fruit[0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(my_fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_fruit.endswith(\"apple\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1151,6 +1305,61 @@
     "1. Create a dictionary `wish_list` representing a list of items you'd like with item names as keys and item prices as values\n",
     "2. Using your dictionary `wish_list`, print the list of item names\n",
     "3. Using your dictionary `wish_list`, print the total cost of your wish list (hint: use the function `sum`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wish_list = {\n",
+    "    \"hawaii_tickets\": 1200,\n",
+    "    \"diving_lessons\": 120,\n",
+    "    \"good_books\": 12\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['hawaii_tickets', 'diving_lessons', 'good_books'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(wish_list.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1332\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_cost = sum(wish_list.values())\n",
+    "print(total_cost)"
    ]
   },
   {
@@ -1599,6 +1808,55 @@
     "  1. Create a variables `methods` listing all methods applying to your dictionary (hint: use the `dir` function)\n",
     "  2. Create a variable `proper_methods` set to an empty list (you will fill it next)\n",
     "  3. Create a for loop on all the items in the `methods` variable and append it to the list `proper_methods` if it does not start with an underscore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dict = {\n",
+    "    \"item1\": \"label1\",\n",
+    "    \"item2\": \"label2\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "methods = dir(my_dict)\n",
+    "proper_methods = []\n",
+    "for method in methods:\n",
+    "    if not method.startswith(\"__\"):\n",
+    "        proper_methods.append(method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['clear', 'copy', 'fromkeys', 'get', 'items', 'keys', 'pop', 'popitem', 'setdefault', 'update', 'values']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(proper_methods)"
    ]
   },
   {
@@ -2235,6 +2493,61 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part2/step1` in Github repo)\n",
+    "1. To do in your own environment\n",
+    "```bash\n",
+    "cd\n",
+    "cd python_lecture\n",
+    "mkdir autograder\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. and 3. To do in your own environment, cf `grading.py` in `solutions_part2/step1` on Github"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. It does not work, python cannot find the module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. `sys.path.append(\"/home/brainhacker/python_lecture/autograder\")`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. `import grading` should work now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Self explanatory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. `grading.comment_grade(8)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2268,6 +2581,34 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part2/step1` in Github repo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1., 2. and 3. cf `exam1.py` in `solutions_part2/step1` in Github repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Run `python /home/brainhacker/python_lecture/autograder/exam1.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. The strange thing is that the output for Peter is `None`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2289,6 +2630,22 @@
     "1. Correct the bug and check it works\n",
     "2. Save the file\n",
     "3. Import `exam1` inside the Jupyter notebook. What do you notice ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part2/step2` in Github repo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. and 2. (cf file `grading.py` in solutions_part2/step2 in Github repo)\n",
+    "    1. Use the VS Code debugging feature (click next to a line number so that to set a red \"Breakpoint\") at the right place, and try to see why the feedback for Peter is None\n",
+    "    2. Change `grade > 5` to `grade >= 5` in the code of `grading.py`"
    ]
   },
   {
@@ -2341,6 +2698,39 @@
     "```\n",
     "import importlib\n",
     "importlib.reload(my_module)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part2/step2` in Github repo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Cf `exam1.py` in `solutions_part2/step2` in Github repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Run `python /home/brainhacker/python_lecture/autograder/exam1.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.\n",
+    "```python\n",
+    "import importlib\n",
+    "importlib.reload(exam1)\n",
+    "```\n",
+    "Nothing should happen when running the two lines above (your latest `exam1.py` and `grading.py` should be in the same directory than the one you added to `sys.path`"
    ]
   },
   {
@@ -2604,6 +2994,34 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part2/step3` in Github repo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. and 2. Cf `grading.py` in `solutions_part2/step3` in Github repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Run `pytest /home/brainhacker/python_lecture/autograder/grading.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Replace `grade > 5` by `grade >= 5`, then run `pytest /home/brainhacker/python_lecture/autograder/grading.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2628,6 +3046,28 @@
     "BONUS:\n",
     "\n",
     "4. In Jupyter, use the `importlib` module to reimport your `grading` module, and then display the help of the `comment_grade` function to check that your example appears"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part2/step4` in Github repo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. and 2. cf `solutions_part2/step4` in Github repo, and run:\n",
+    "`pytest --doctest-modules /home/brainhacker/python_lecture/autograder/grading.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Replace `'Grade high enough!'` with `'Grade high enough'` in Examples docstring (i.e. remove the exclamation mark so that the output is exactly as expected)"
    ]
   },
   {
@@ -3067,6 +3507,48 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. and 2. `conda create -n iss38 python=3.8`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. `conda activate iss38`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. `conda list`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. `conda install requests reverse-geocode pylint pytest`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. `conda list`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -3239,6 +3721,20 @@
     "8. Test that:\n",
     "    1. You can run the file on the terminal and it will print the desired output\n",
     "    2. Importing the same file as a module in Jupyter Notebook will not print anything  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution (cf `solutions_part3` in Github repo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cf file `iss.py` in `solutions_part3/space` in GitHub repo"
    ]
   },
   {
@@ -4714,6 +5210,57 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,3))\n",
+    "plt.plot(np.median(first_file_data, axis=1), label = 'median')\n",
+    "plt.title('Median of inflammation score across days for each patient');\n",
+    "plt.xlabel('Patient');\n",
+    "plt.ylabel('Median inflammation score');\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. and 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,3))\n",
+    "plt.plot(np.median(first_file_data, axis=0), label = 'min')\n",
+    "plt.plot(np.median(first_file_data, axis=0), label = 'median')\n",
+    "plt.plot(np.median(first_file_data, axis=0), label = 'max')\n",
+    "plt.title('Median of inflammation score across patients for each day');\n",
+    "plt.xlabel('Day');\n",
+    "plt.ylabel('Median inflammation score');\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -5347,6 +5894,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_long_mask = (met_data_withna['reclong']>=-180) & (met_data_withna['reclong']<=180)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -5355,7 +5918,29 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "met_data_withna[valid_long_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data_mask = valid_year_mask & valid_long_mask\n",
+    "#alternative: clean_data_mask = np.logical_and(valid_year_mask, valid_long_mask)\n",
+    "met_data_clean = met_data_withna[clean_data_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data_mask.sum()"
+   ]
   },
   {
    "cell_type": "markdown",
